# agent_orange

./: .gitignore  ADD_COMPANIES.md  Agent Orange - Design & UX Summary.md  CHEATSHEET.md  CONFIDENCE.md  FEATURES.md  HELP.md  HELP_AGENT.md  MOBILE.md  MOTION.md  Makefile  PROGRESS.md  Procfile.dev  QUICKSTART.md  README.md  UI_TEST_PLAN.md  features-handoff.sh  handoff.sh  help-handoff.sh  mobile-handoff.sh  motion-handoff.sh  package-lock.json  package.json  playwright.config.ts  poc_assessment.md  tsconfig.json
workers/: .env.example  Procfile  README.md  pyproject.toml  railway.toml
workers/ao/: __init__.py  cli.py  config.py  daemon.py  logging.py  main.py
workers/ao/agents/: confidence.py  demo_fixtures.py  discovery.py  extraction.py  monitoring.py  narrative.py  pipeline.py  pipeline_state.py  prompts.py  registry.py  runlog.py  source_registry.py  validation.py
workers/ao/api/: deps.py  routes_activity.py  routes_admin.py  routes_companies.py  routes_events.py  routes_health.py  routes_help.py  routes_news.py  routes_portfolio.py  routes_providers.py  routes_review.py  routes_run.py  routes_settings.py  routes_sources.py  routes_universe.py  routes_usage.py  schemas.py  serializers.py
workers/ao/data/: sp500_logos.py  sp500_seed.py
workers/ao/db/: base.py  engine.py  models.py  seed.py  wipe.py
workers/ao/help/: knowledge.py  prompt.py
workers/ao/integrations/: anthropic_client.py  cik_resolver.py  consensus_provider.py  edgar_client.py  finnhub_client.py  generic_fetcher.py  (+5 more)
workers/scripts/: export_seed_fixtures.py  mirror_logos.py  seed_logos.py
(+112 files in other folders)
