[project]
name = "agent-orange-workers"
version = "0.1.0"
description = "Agent Orange — agentic backend for financial-results monitoring"
requires-python = ">=3.12"
dependencies = [
    # web + data layer
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    # http + scraping + pdf
    "httpx>=0.28",
    "tenacity>=9.0",
    "readability-lxml>=0.8.1",
    "pdfplumber>=0.11",
    "pdfminer.six>=20240706",
    # llm + integrations
    "anthropic>=0.40",
    "twilio>=9.4",
    # scheduling + cli
    "apscheduler>=3.10",
    "typer>=0.15",
    # logging
    "structlog>=24.4",
    # email templates
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
ao-api = "ao.main:run_api"
ao-daemon = "ao.daemon:run_daemon"
ao = "ao.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ao*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
